# build-box

./: .gitignore  pyproject.toml  setup.py  tox.ini
c-src/: bbox-do.h  config.c  init.c  login.c  mount.c  run.c  umount.c  util.c
debian/: changelog  control  rules
lib/aeltra/buildbox/: cli.py  error.py  generator.py  sysroot.py  target.py
lib/aeltra/buildbox/misc/: distribution.py  paths.py
scripts/: bash-completion.sh
